--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,7 +34,7 @@ services:
     restart: always
     volumes:
       - nextcloud-data:/var/www/html
-      - /etc/localtime:/etc/localtime:ro
+      # - /etc/localtime:/etc/localtime:ro
     environment:
       - VIRTUAL_HOST=[##mynextcloud.mooo.com##]
       - LETSENCRYPT_HOST=[##mynextcloud.mooo.com##]
@@ -82,7 +82,7 @@ services:
       - nextcloud-proxy-certs:/etc/nginx/certs
       - nextcloud-proxy-vhost.d:/etc/nginx/vhost.d
       - nextcloud-proxy-html:/usr/share/nginx/html
-      - /etc/localtime:/etc/localtime:ro
+      # - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
       - nextcloud-proxy-tier
